--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -578,7 +578,7 @@
   "enter.captcha":"Nhập captcha",
   "date.full.valid":"Vui lòng nhập đủ ngày tạo",
   "download.multi": "Tải nhiều",
-  "contract.down": "Tải hợp đồng hợp đồng",
+  "contract.down": "Tải hợp đồng",
   "add.unit.success":"Thêm mới tổ chức thành công!",
   "link.valid":"Link truy cập đã hết hạn",
   "change.pass.first":"Tài khoản đăng nhập lần đầu, vui lòng đổi mật khẩu",
