quan ly hop dong theo thu muc + danh muc khach hang + them giao dien loai text

--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -611,5 +611,5 @@
   "confirm.customer.delete": "Bạn có chắc chắn muốn xóa khách hàng này không?",
   "attribute.text.type": "Loại text",
   "choose.text.type": "Chọn loại text",
-  "tree.folder": "Cây thư mục"
+  "contract.folder": "Quản lý thư mục"
 }
