--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -607,5 +607,5 @@
   "confirm.customer.delete": "Are you sure you want to delete this partner?",
   "attribute.text.type": "Text type",
   "choose.text.type": "Choose text type",
-  "tree.folder": "Tree folder"
+  "contract.folder": "Folder management"
 }
