--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -621,5 +621,23 @@
   "attribute.text.type": "Text type",
   "choose.text.type": "Choose text type",
   "tree.folder": "Tree folder",
-  "contract.views": "View more contracts"
+  "contract.views": "View more contracts",
+  "create-date.soon":"Expiration date soon",
+  "report.contract.receive":"Contract report received",
+  "report.contract.receive.full":"Contract report received",
+  "add.contract.one.not.template":"Add new non-formal single contract",
+  "add.contract.one.template":"Add new formal single contract",
+  "add.contract.batch":"Add new batch contract",
+  "fix.contract":"Fix contract",
+  "view.list.contracts.me.and.child":"View a list of contracts for my organization and its suborganization",
+  "view.list.contracts.me":"View a list of my organization's contracts",
+  "search.contract":"Search contract",
+
+  "role.group.report":"Reporting function group",
+  "role.report.detail":"Report detail",
+  "role.soon.expire.time":"Report is about to expire",
+  "role.processing.status.contract":"Report processing status",
+  "role.number.status":"Report quantity status",
+  "role.contract.type.quantity":"Report quantity by contract type",
+  "role.contract.receive":"Report contract receive"
 }
