add/ edit danh muc khach hang

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -620,5 +620,5 @@
   "contract.download1":"Download",
   "attribute.text.type": "Text type",
   "choose.text.type": "Choose text type",
-  "tree.folder": "Tree folder"
+  "contract.folder": "Folder management"
 }
