them o text dinh dang tien

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -620,5 +620,7 @@
   "contract.download1":"Download",
   "attribute.text.type": "Text type",
   "choose.text.type": "Choose text type",
-  "contract.folder": "Folder management"
+  "contract.folder": "Folder management",
+  "currency": "Currency",
+  "default": "Default"
 }
