--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -625,5 +625,6 @@
   "contract.views": "Xem xét nhiều",
   "customer.delete": "Bạn có chắc chắn muốn xóa khách hàng này không?",
   "currency": "Số tiền",
-  "default": "Mặc định"
+  "default": "Mặc định",
+  "select.type.add.partner": "Chọn kiểu thêm đối tác"
 }
