--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -626,5 +626,6 @@
   "customer.delete": "Bạn có chắc chắn muốn xóa khách hàng này không?",
   "currency": "Số tiền",
   "default": "Mặc định",
-  "select.type.add.partner": "Chọn kiểu thêm đối tác"
+  "select.type.add.partner": "Chọn kiểu thêm đối tác",
+  "find.partner": "Tìm kiếm đối tác"
 }
