Danh muc khach hang add b2 them doi tac

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -642,7 +642,8 @@
   "currency": "Currency",
   "default": "Default",
   "customer.delete": "Delete partner",
-  "find.partner": "Find partner",
+  "find.partner.personal": "Find personal partner",
+  "find.partner.organization": "Find organization partner",
   "contract.views": "Contracts view",
   "verified.cardid": "Verified by ID card",
   "choose.font": "Choose font",
