--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -645,5 +645,6 @@
   "customer.delete": "Bạn có chắc chắn muốn xóa khách hàng này không?",
   "currency": "Số tiền",
   "default": "Mặc định",
-  "find.partner": "Tìm kiếm đối tác"
+  "find.partner.personal": "Tìm kiếm đối tác cá nhân",
+  "find.partner.organization": "Tìm kiếm đối tác tổ chức"
 }
