sửa phần cấu hình sms email

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -652,5 +652,6 @@
   "contract.about.expire":"Contract is about to expire",
   "contract.expired":"Contract expired",
   "contract.completed":"Completed contract",
-  "config.day.expiration":"Configuring expiration date"
+  "config.day.expiration":"Configuring expiration date",
+  "role.config.sms.email":"SMS/Email configuration function group"
   }
