--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -606,7 +606,8 @@
   "personal.customer.name":"Personal name",
   "tax.code":"Tax code",
   "phone_mail":"Phone number/Email",
-  "customer.search.name.placeholder":"Enter keywords to search by name",
+  "org.partner.search.name.placeholder":"Please enter the name, tax code of the organization to search",
+  "personal.partner.search.name.placeholder":"Please enter the name, tax code of the organization to search",
   "organization.customer.add":"Add partner",
   "personal.customer.add":"Add partner",
   "organization.customer.detail":"Organization partner detail",
