--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -643,7 +643,7 @@
   "role.number.status":"Báo cáo số lượng theo trạng thái",
   "role.contract.type.quantity":"Báo cáo số lượng theo loại hợp đồng",
   "role.contract.receive":"Báo cáo hợp đồng nhận",
-  "customer.delete": "Bạn có chắc chắn muốn xóa khách hàng này không?",
+  "customer.delete": "Xóa khách hàng",
   "currency": "Số tiền",
   "default": "Mặc định",
   "find.partner.personal": "Tìm kiếm đối tác cá nhân",
