Số lượng HĐ + button X signer text + noti customer

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -648,5 +648,7 @@
   "contract.views": "Contracts view",
   "verified.cardid": "Verified by ID card",
   "choose.font": "Choose font",
-  "reject.question": "Are you sure you want to reject this contract? Please enter the reason for rejection"
+  "reject.question": "Are you sure you want to reject this contract? Please enter the reason for rejection",
+  "num.contract.buy":"Number of contracts purchased",
+  "num.contract.use":"Number of contracts used"
   }
