--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -649,6 +649,7 @@
   "find.partner.personal": "Tìm kiếm đối tác cá nhân",
   "find.partner.organization": "Tìm kiếm đối tác tổ chức",
   "num.contract.buy": "Số lượng hợp đồng đã mua",
-  "num.contract.use": "Số lượng hợp đồng đã sử dụng"
+  "num.contract.use": "Số lượng hợp đồng đã sử dụng",
+  "num.contract": "Số lượng hợp đồng"
   
 }
