Thông tin hợp đồng gốc, hợp đồng thanh lý

--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -666,6 +666,7 @@
   "contract.liquidation": "Thanh lý hợp đồng",
   "contract.status.liquidated": "Đã thanh lý",
   "contract.original": "Hợp đồng gốc",
+  "contract.liquidated": "Hợp đồng thanh lý",
   "folder.add": "Thêm thư mục",
   "folder.name": "Tên thư mục",
   "folder.description": "Mô tả",
