--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -666,6 +666,7 @@
   "contract.liquidation": "Contract liquidation",
   "contract.status.liquidated": "Liquidated",
   "contract.original": "Original contract",
+  "contract.liquitdated": "Liquidated contract",
   "folder.add": "Add folder",
   "folder.name": "Folder name",
   "folder.description": "Folder description",
