lap trinh giao dien CTS

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -599,5 +599,20 @@
   "not.photo":"You haven't selected a photo yet",
   "mark.contract":"Seal the contract contract",
   "customer.list":"Customer list",
-  "contract.views": "View more contracts"
+  "contract.views": "View more contracts",
+  "certificate.list": "Digital certificate list",
+  "file.name":"File name",
+  "start-date": "Start date",
+  "end-date": "End date",
+  "add.certificate":"Add new digital certificate",
+  "email.user":"User email",
+  "file.certificate": "File digital certificate",
+  "choose.file.certificate": "Choose file digital certificate (.p12)",
+  "notation": "Notation",
+  "email.used": "Used email",
+  "infor.certificate":"Information digital certificate",
+  "infor.file.certificate": "Information file digital certificate",
+  "subject": "Subject",
+  "unit":"Unit",
+  "update.infor.certificate": "Update information digital certificate"
 }
