quan ly hop dong theo thu muc

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -673,6 +673,8 @@
   "folder.edit": "Edit folder",
   "folder.delete": "Delete folder",
   "folder.openDetail": "Detail folder",
+  "folder.search.name.placeholder": "Please enter the folder name to search",
   "confirm.folder.delete": "Are you sure you want to delete this folder?",
-  "edit.exp.sign.time":"Edit signing expiration date"
+  "edit.exp.sign.time":"Edit signing expiration date",
+  "add.contract.folder":"Add contract"
   }
