phat hanh hop dong + xoa console log

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -676,5 +676,8 @@
   "folder.search.name.placeholder": "Please enter the folder name to search",
   "confirm.folder.delete": "Are you sure you want to delete this folder?",
   "edit.exp.sign.time":"Edit signing expiration date",
-  "add.contract.folder":"Add contract"
+  "add.contract.folder":"Add contract",
+  "release.contract.success": "Release contract successfully",
+  "release.contract.error": "Release contract failed"
+
   }
