--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -676,7 +676,9 @@
   "folder.search.name.placeholder": "Nhập tên thư mục để tìm kiếm",
   "confirm.folder.delete": "Bạn có chắc chắn muốn xóa thư mục này không?",
   "edit.exp.sign.time":"Chỉnh sửa ngày hết hạn ký",
-  "add.contract.folder": "Thêm hợp đồng"
+  "add.contract.folder": "Thêm hợp đồng",
+  "release.contract.success": "Phát hành hợp đồng thành công",
+  "release.contract.error": "Phát hành hợp đồng thất bại"
 
   
 }
