--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -678,7 +678,6 @@
   "edit.exp.sign.time":"Chỉnh sửa ngày hết hạn ký",
   "add.contract.folder": "Thêm hợp đồng",
   "release.contract.success": "Phát hành hợp đồng thành công",
-  "release.contract.error": "Phát hành hợp đồng thất bại"
-
-  
+  "release.contract.error": "Phát hành hợp đồng thất bại",
+  "hide.processing.thread":"Ẩn luồng xử lý"
 }
