them noti folder

--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -677,6 +677,10 @@
   "confirm.folder.delete": "Bạn có chắc chắn muốn xóa thư mục này không?",
   "folder.type.contract": "Loại hợp đồng",
   "folder.partner.name": "Tên đối tác",
+  "folder.add.success": "Thêm thư mục thành công",
+  "folder.edit.success": "Sửa thư mục thành công",
+  "folder.delete.success": "Xóa thư mục thành công",
+  "folder.name.exist": "Tên thư mục đã tồn tại",
   "edit.exp.sign.time":"Chỉnh sửa ngày hết hạn ký",
   "add.contract.folder": "Thêm hợp đồng",
   "release.contract.success": "Phát hành hợp đồng thành công",
