update thong bao loi cts

--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -245,6 +245,7 @@
   "error.server": "Có lỗi! Vui lòng liên hệ nhà phát triển để được xử lý.",
   "error.username.required": "Tên đăng nhập không được để trống",
   "error.password.required": "Mật khẩu không được để trống",
+  "password.required":"Mật khẩu không được để trống và phải có 6 ký tự trở lên",
   "error.username.password": "Tên đăng nhập hoặc mật khẩu không đúng",
   "error.password-new.required": "Mật khẩu mới không được để trống",
   "error.confirm-password-new.required": "Xác nhận mật khẩu mới không được để trống",
@@ -639,8 +640,6 @@
   "zoom.warning":"Khi phóng to/ thu nhỏ, vị trí ô ký khi kéo sẽ không đúng. Vui lòng để màn hình ở chế độ 100% để trải nghiệm được tốt nhất!",
   "attribute.text.type": "Loại text",
   "choose.text.type": "Chọn loại text",
-  "contract.folder": "Quản lý thư mục",
-  "contract.views": "Xem xét nhiều",
   "create-date.soon":"Ngày hết hiệu lực",
   "report.contract.receive":"Hợp đồng nhận",
   "report.contract.receive.full":"Báo cáo hợp đồng nhận",
