--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -89,6 +89,7 @@
   "contract.share": "Chia sẻ hợp đồng",
   "contract.lead": "Điều phối",
   "contract.view": "Xem xét",
+  "contract.views": "Xem xét nhiều",
   "contract.sign": "Ký",
   "contract.document": "Đóng dấu",
   "contract.wait-lead": "Chờ điều phối",
@@ -698,5 +699,8 @@
   "add.contract.folder": "Thêm hợp đồng",
   "release.contract.success": "Phát hành hợp đồng thành công",
   "release.contract.error": "Phát hành hợp đồng thất bại",
-  "hide.processing.thread":"Ẩn luồng xử lý"
+  "hide.processing.thread":"Ẩn luồng xử lý",
+  "sign_by_cert":"Ký bằng chứng thư số",
+  "choice": "Lựa chọn",
+  "signer":"Người ký"
 }
