tích hợp ẩn luồng xử lý lúc tạo

--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -702,5 +702,6 @@
   "hide.processing.thread":"Ẩn luồng xử lý",
   "sign_by_cert":"Ký bằng chứng thư số",
   "choice": "Lựa chọn",
-  "signer":"Người ký"
+  "signer":"Người ký",
+  "unit.email.name": "Địa chỉ email/Họ tên"
 }
