--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -700,7 +700,8 @@
   "release.contract.success": "Phát hành hợp đồng thành công",
   "release.contract.error": "Phát hành hợp đồng thất bại",
   "hide.processing.thread":"Ẩn luồng xử lý",
-  "sign_by_cert":"Ký bằng chứng thư số",
+  "sign_by_cert":"Ký số bằng chứng thư số",
   "choice": "Lựa chọn",
-  "signer":"Người ký"
+  "signer":"Người ký",
+  "sign.multi.success":"Ký số nhiều thành công"
 }
