--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -703,5 +703,6 @@
   "sign_by_cert":"Ký số bằng chứng thư số",
   "choice": "Lựa chọn",
   "signer":"Người ký",
-  "sign.multi.success":"Ký số nhiều thành công"
+  "sign.multi.success":"Ký số nhiều thành công",
+  "error.org.required":"Tổ chức không được để trống"
 }
