update quan ly cts, popup chon ky cts

--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -465,8 +465,8 @@
   "sms.used":"Số lượng SMS đã sử dụng:",
   "timestamp.used": "Số lượng timestamp đã sử dụng:",
   "timestamp.purchased":"Số lượng timestamp đã mua:",
-  "ceca.used":"Số lần xác nhận BCT đã sử dụng:",
-  "ceca.purchased": "Số lần xác nhận BCT đã mua:",
+  "ceca.used":"Số lần xác thực CeCA đã sử dụng:",
+  "ceca.purchased": "Số lần xác thực CeCA đã mua:",
   "information.signatures":"THÔNG TIN CÁC BÊN KÝ",
   "contract.number.lot":"SỐ HỢP ĐỒNG THEO LÔ",
   "ok.sign":"Đồng ý và ký",
