sua text thong tin file cts

--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -626,7 +626,7 @@
   "email.used": "Email sử dụng",
   "infor.certificate":"Thông tin chứng thư số",
   "update.infor.certificate": "Cập nhật thông tin chứng thư số",
-  "infor.file.certificate": "Thông Tin File Chứng Thư Số",
+  "infor.file.certificate": "THÔNG TIN FILE CHỨNG THƯ SỐ",
   "subject": "Chủ thể",
   "unit":"Đơn vị",
   "contract.folder": "Quản lý thư mục",
