--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -409,6 +409,7 @@
   "info.token": "Information in USB Token",
   "enter.tax_code.cardId": "Enter tax code or card id",
   "info.hsm":"Information in HSM",
+  "info.cert":"Information in Cert",
   "enter.tax.code": "Enter tax code",
   "enter.cardId": "Enter card id",
   "cardId": "Card Id",
