--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -416,6 +416,7 @@
   "tax_code.cardId":"Mã số thuế/CMT/CCCD",
   "info.token":"Thông tin trong USB Token",
   "info.hsm":"Thông tin trong HSM",
+  "info.cert":"Thông tin trong CTS",
   "enter.tax_code.cardId":"Nhập mã số thuế/CMT/CCCD",
   "enter.tax.code":"Nhập mã số thuế",
   "enter.cardId":"Nhập CMT/CCCD",
