--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -445,6 +445,7 @@
   "sign.ekyc.app":"Vui lòng ký eKYC trên ứng dụng điện thoại",
   "authorization":"Uỷ quyền",
   "forward":"Chuyển tiếp",
+  "processing.auth":"Ủy quyền xử lý",
   "choose.network":"Chọn nhà mạng",
   "network.operator":"Nhà mạng",
   "confirm":"Xác nhận",
