--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -706,5 +706,6 @@
   "signer":"Người ký",
   "unit.email.name": "Địa chỉ email/Họ tên",
   "error.org.required":"Tổ chức không được để trống",
-  "sign.multi.success":"Ký nhiều hợp đồng thành công"
+  "sign.multi.success":"Ký nhiều hợp đồng thành công",
+  "expire.time.contract.notif":"Hợp đồng đã hết hạn ký"
 }
