--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -277,6 +277,7 @@
   "error.contract-template.effective-end-date": "Effective end date is required",
   "error.contract-template.effective-end-date.compare": "End date must not be less than start date",
   "error.partner.name.required": "Partner is required",
+  "error.contract.file.type": "Contract file error, please use another file",
   "confirm.role.delete": "Are you sure you want to delete this role?",
   "confirm.contract-type.delete": "Are you sure you want to delete this type of contract?",
   "personal": "Personal",
