fix bug phan quyen quan ly danh sach cts

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -686,25 +686,32 @@
   "release.contract.success": "Release contract successfully",
   "release.contract.error": "Release contract failed",
   "hide.processing.thread":"Hide processing thread",
-  "certificate.list": "Digital certificate list",
+  "certificate.list": "Digital certificate server list",
   "file.name":"File name",
   "start-date": "Start date",
   "end-date": "End date",
-  "add.certificate":"Add new digital certificate",
+  "add.certificate":"Add new digital certificate server",
   "email.user":"User email",
-  "file.certificate": "File digital certificate",
-  "choose.file.certificate": "Choose file digital certificate (.p12)",
+  "file.certificate": "File digital certificate server",
+  "choose.file.certificate": "Choose file digital certificate server (.p12)",
   "notation": "Notation",
   "email.used": "Used email",
-  "infor.certificate":"Information digital certificate",
-  "infor.file.certificate": "Information file digital certificate",
+  "infor.certificate":"Information digital certificate server",
+  "infor.file.certificate": "Information file digital certificate server",
   "subject": "Subject",
   "unit":"Unit",
-  "update.infor.certificate": "Update information digital certificate",
-  "sign_by_cert":"Sign by certificate",
+  "update.infor.certificate": "Update information digital certificate server",
+  "sign_by_cert":"Sign by certificate server",
   "choice": "Choice",
   "unit.email.name": "Email/name",
   "error.org.required":"Organization is required",
   "multi.sign.warning": "The system supports signing up to 50 contracts/ signing time",
-  "expire.time.contract.notif":"Contract has expired"
+  "expire.time.contract.notif":"Contract has expired",
+  "information": "Information",
+  "sign_cert_title": "Sign Server Certificate server",
+  "role.cerificate.list":"Digital certificate server list management",
+  "role.cerificate.add": "Add new digital certificate server",
+  "role.cerificate.update": "Update information digital certificate server",
+  "role.cerificate.detail": "View information digital certificate server",
+  "role.cerificate.filter": "Search digital certificate server"
 }
