--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -231,11 +231,11 @@
   "role.contract-type.delete": "Xóa loại hợp đồng",
   "role.contract-type.filter": "Tìm kiếm loại hợp đồng",
   "role.contract-type.view.detail": "Xem thông tin chi tiết loại hợp đồng",
-  "role.cerificate.list":"Nhóm chức năng quản lý danh sách chứng thư số",
-  "role.cerificate.add": "Thêm mới chứng thư số",
-  "role.cerificate.update": "Cập nhật thông tin chứng thư số",
-  "role.cerificate.detail": "Thông tin chứng thư số",
-  "role.cerificate.filter": "Tìm kiếm chứng thư số",
+  "role.cerificate.list":"Nhóm chức năng quản lý danh sách chứng thư số server",
+  "role.cerificate.add": "Thêm mới chứng thư số server",
+  "role.cerificate.update": "Cập nhật thông tin chứng thư số server",
+  "role.cerificate.detail": "Xem thông tin chứng thư số server",
+  "role.cerificate.filter": "Tìm kiếm chứng thư số server",
   "contract-type.list": "Danh sách loại hợp đồng",
   "contract-type.add": "Thêm mới loại hợp đồng",
   "contract-type.update": "Cập nhật thông tin loại hợp đồng",
@@ -623,19 +623,19 @@
   "personal.customer.name":"Tên cá nhân",
   "tax.code":"Mã số thuế",
   "phone_mail":"SĐT/Email",
-  "certificate.list": "Danh sách chứng thư số",
+  "certificate.list": "Danh sách chứng thư số server",
   "file.name":"Tên file",
   "start-date": "Ngày bắt đầu",
   "end-date": "Ngày hết hạn",
-  "add.certificate":"Thêm mới chứng thư số",
+  "add.certificate":"Thêm mới chứng thư số server",
   "email.user":"Email người dùng",
-  "file.certificate": "File chứng thư số",
-  "choose.file.certificate": "Chọn file chứng thư số (.p12)",
+  "file.certificate": "File chứng thư số server",
+  "choose.file.certificate": "Chọn file chứng thư số server(.p12)",
   "notation": "Ký hiệu",
   "email.used": "Email sử dụng",
-  "infor.certificate":"Thông tin chứng thư số",
-  "update.infor.certificate": "Cập nhật thông tin chứng thư số",
-  "infor.file.certificate": "THÔNG TIN FILE CHỨNG THƯ SỐ",
+  "infor.certificate":"Thông tin chứng thư số server",
+  "update.infor.certificate": "Cập nhật thông tin chứng thư số server",
+  "infor.file.certificate": "THÔNG TIN FILE CHỨNG THƯ SỐ SERVER",
   "subject": "Chủ thể",
   "unit":"Đơn vị",
   "contract.folder": "Quản lý thư mục",
