lap trinh giao dien bao cao econtact-msale

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -553,6 +553,7 @@
   "report.number.contracts.status.full":"Report number of contracts by status",
   "report.number.contracts.contract-type.full":"Report number of contracts by contract type",
   "report.number.contracts.type.sign.full":"Report the number of contracts in the type of sign",
+  "report.number.econtract.msale":"Report the number of contracts econtract - mSale",
   "include.org1":"Including sub-organizations (Sub-organizations include only tier-one sub-organizations)",
   "contract.time.create": "Time create",
   "signing.expiration.date":"Sign expiration time",
@@ -578,6 +579,7 @@
   "enter.captcha":"Enter captcha",
   "date.full.valid":"Please enter the full creation date",
   "date.full.valid.soon-expire":"Please enter the expiration date",
+  "date.full.valid.completed":"Please enter the completed date",
   "download.multi": "Download multi",
   "contract.down": "Download contract contract",
   "add.unit.success":"Add organization success!",
@@ -628,6 +630,7 @@
   "choose.text.type": "Choose text type",
   "contract.folder": "Folder management",
   "create-date.soon":"Expiration date soon",
+  "completed-date":"Completed day",
   "report.contract.receive":"Contract report received",
   "report.contract.receive.full":"Contract report received",
   "add.contract.one.not.template":"Add new non-formal single contract",
@@ -644,6 +647,7 @@
   "role.number.status":"Report quantity status",
   "role.contract.type.quantity":"Report quantity by contract type",
   "role.contract.receive":"Report contract receive",
+  "role.number.contract.econtract.msale":"Report quantity of contracts econtract - mSale ",
   "currency": "Currency",
   "default": "Default",
   "customer.delete": "Delete partner",
