--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -565,6 +565,7 @@
   "report.number.contracts.contract-type.full":"Báo cáo số lượng hợp đồng theo loại hợp đồng",
   "report.number.contracts.type.sign.full":"Báo cáo số lượng hợp đồng theo hình thức ký",
   "include.org1":"Bao gồm cả tổ chức con (Tổ chức con chỉ bao gồm tổ chức con cấp một)",
+  "report.number.econtract.msale":"SL HĐ econtract - mSale",
   "contract.time.create": "Thời gian tạo",
   "signing.expiration.date":"Ngày hết hạn hiệu lực",
   "date.completed":"Ngày hoàn thành/từ chối/huỷ",
@@ -590,7 +591,7 @@
   "enter.captcha":"Nhập captcha",
   "date.full.valid":"Vui lòng nhập đủ ngày tạo",
   "date.full.valid.soon-expire":"Vui lòng nhập đủ ngày sắp hết hiệu lực",
-
+  "date.full.valid.completed":"Vui lòng nhập đủ ngày hoàn thành",
   "download.multi": "Tải nhiều",
   "contract.down": "Tải hợp đồng",
   "add.unit.success":"Thêm mới tổ chức thành công!",
@@ -651,6 +652,7 @@
   "attribute.text.type": "Loại text",
   "choose.text.type": "Chọn loại text",
   "create-date.soon":"Ngày hết hiệu lực",
+  "completed-date":"Ngày hoàn thành",
   "report.contract.receive":"Hợp đồng nhận",
   "report.contract.receive.full":"Báo cáo hợp đồng nhận",
   "add.contract.one.not.template":"Thêm mới hợp đồng đơn lẻ không theo mẫu",
@@ -667,6 +669,7 @@
   "role.number.status":"Báo cáo số lượng theo trạng thái",
   "role.contract.type.quantity":"Báo cáo số lượng theo loại hợp đồng",
   "role.contract.receive":"Báo cáo hợp đồng nhận",
+  "role.number.contract.econtract.msale":"Báo cáo sản lượng hợp đồng eContract-mSale",
   "customer.delete": "Xóa khách hàng",
   "currency": "Số tiền",
   "default": "Mặc định",
