--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -565,6 +565,7 @@
   "report.number.contracts.status.full":"Báo cáo số lượng hợp đồng theo trạng thái",
   "report.number.contracts.contract-type.full":"Báo cáo số lượng hợp đồng theo loại hợp đồng",
   "report.number.contracts.type.sign.full":"Báo cáo số lượng hợp đồng theo hình thức ký",
+  "report.status.send.sms.email": "Báo cáo trạng thái gửi SMS/Email",
   "include.org1":"Bao gồm cả tổ chức con (Tổ chức con chỉ bao gồm tổ chức con cấp một)",
   "report.number.econtract.msale":"SL HĐ econtract - mSale",
   "contract.time.create": "Thời gian tạo",
@@ -671,6 +672,7 @@
   "role.contract.type.quantity":"Báo cáo số lượng theo loại hợp đồng",
   "role.contract.receive":"Báo cáo hợp đồng nhận",
   "role.number.contract.econtract.msale":"Báo cáo sản lượng hợp đồng eContract-mSale",
+  "role.report.history.send.sms.email":"Báo cáo lịch sử gửi SMS/EMAIL",
   "customer.delete": "Xóa khách hàng",
   "currency": "Số tiền",
   "default": "Mặc định",
@@ -723,5 +725,8 @@
   "multi.sign.warning": "Hệ thống hỗ trợ ký tối đa 50 hợp đồng/ 1 lần ký",
   "expire.time.contract.notif":"Hợp đồng đã hết hạn ký",
   "information": "Thông tin",
-  "sign_cert_title": "Ký Chứng thư số server"
+  "sign_cert_title": "Ký Chứng thư số server",
+  "time.send.date":"Thời gian gửi",
+  "report.status.contract": "Trạng thái HĐ",
+  "status.sms.email":"Trạng thái gửi SMS/EMAIL"
 }
