--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -416,6 +416,7 @@
   "watch.contract":"Xem HĐ",
   "not.have.sample.file":"Bạn chưa có file mẫu?",
   "download.sample.file":"Tải file mẫu",
+  "download.sample.file.fail":"Tải xuống file mẫu thất bại",
   "expire.date.contract":"Ngày hết hiệu lực hợp đồng",
   "enter.contract.no":"Nhập số hợp đồng",
   "enter.contract.name":"Nhập tên hợp đồng",
