Sửa thông báo tải xuống báo cáo msale

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -719,5 +719,6 @@
   "role.cerificate.detail": "View information digital certificate server",
   "role.cerificate.filter": "Search digital certificate server",
   "report.msale.search.failed": "Look up failed reports",
-  "report.msale.download.failed": "Export failed report file"
+  "report.msale.download.failed": "Export failed report file",
+  "download.success": "Downloaded successfully"
 }
