--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -724,5 +724,6 @@
   "information": "Thông tin",
   "sign_cert_title": "Ký Chứng thư số server",
   "report.msale.search.failed": "Tra cứu báo cáo thất bại",
-  "report.msale.download.failed": "Xuất file báo cáo thất bại"
+  "report.msale.download.failed": "Xuất file báo cáo thất bại",
+  "download.success": "Tải xuống thành công"
 }
