--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -565,7 +565,7 @@
   "report.number.contracts.contract-type.full":"Báo cáo số lượng hợp đồng theo loại hợp đồng",
   "report.number.contracts.type.sign.full":"Báo cáo số lượng hợp đồng theo hình thức ký",
   "include.org1":"Bao gồm cả tổ chức con (Tổ chức con chỉ bao gồm tổ chức con cấp một)",
-  "report.number.econtract.msale":"SL HĐ econtract - mSale",
+  "report.number.econtract.msale":"SL HĐ eContract - mSale",
   "contract.time.create": "Thời gian tạo",
   "signing.expiration.date":"Ngày hết hạn hiệu lực",
   "date.completed":"Ngày hoàn thành/từ chối/huỷ",
