update giao dien bao cao lich su sms

--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -728,5 +728,6 @@
   "sign_cert_title": "Ký Chứng thư số server",
   "time.send.date":"Thời gian gửi",
   "report.status.contract": "Trạng thái HĐ",
-  "status.sms.email":"Trạng thái gửi SMS/EMAIL"
+  "status.sms.email":"Trạng thái gửi SMS/EMAIL",
+  "code.contract": "Mã HĐ"
 }
