Thêm tooltip, close upload box sau khi tải file thành công

--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -723,5 +723,6 @@
   "multi.sign.warning": "Hệ thống hỗ trợ ký tối đa 50 hợp đồng/ 1 lần ký",
   "expire.time.contract.notif":"Hợp đồng đã hết hạn ký",
   "information": "Thông tin",
-  "sign_cert_title": "Ký Chứng thư số server"
+  "sign_cert_title": "Ký Chứng thư số server",
+  "upload_attach_files": "Tải lên file đính kèm"
 }
