--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -718,5 +718,6 @@
   "role.cerificate.add": "Add new digital certificate server",
   "role.cerificate.update": "Update information digital certificate server",
   "role.cerificate.detail": "View information digital certificate server",
-  "role.cerificate.filter": "Search digital certificate server"
+  "role.cerificate.filter": "Search digital certificate server",
+  "upload_attach_files": "Upload attachments"
 }
