Thêm phân quyền báo cáo sms

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -555,7 +555,7 @@
   "report.number.contracts.contract-type.full":"Report number of contracts by contract type",
   "report.number.contracts.type.sign.full":"Report the number of contracts in the type of sign",
   "report.number.econtract.msale":"Report the number of contracts eContract - mSale",
-  "report.status.send.sms.email": "Report SMS/Email sending status",
+  "report.status.send.sms": "Report SMS sending status",
   "include.org1":"Including sub-organizations (Sub-organizations include only tier-one sub-organizations)",
   "contract.time.create": "Time create",
   "signing.expiration.date":"Sign expiration time",
@@ -650,7 +650,7 @@
   "role.contract.type.quantity":"Report quantity by contract type",
   "role.contract.receive":"Report contract receive",
   "role.number.contract.econtract.msale":"Report quantity of contracts eContract - mSale ",
-  "role.report.history.send.sms.email":"Report SMS sending history",
+  "role.report.history.send.sms":"Report SMS sending history",
   "currency": "Currency",
   "default": "Default",
   "customer.delete": "Delete partner",
