--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -565,7 +565,7 @@
   "report.number.contracts.status.full":"Báo cáo số lượng hợp đồng theo trạng thái",
   "report.number.contracts.contract-type.full":"Báo cáo số lượng hợp đồng theo loại hợp đồng",
   "report.number.contracts.type.sign.full":"Báo cáo số lượng hợp đồng theo hình thức ký",
-  "report.status.send.sms.email": "Lịch sử gửi SMS",
+  "report.status.send.sms": "Lịch sử gửi SMS",
   "include.org1":"Bao gồm cả tổ chức con (Tổ chức con chỉ bao gồm tổ chức con cấp một)",
   "report.number.econtract.msale":"SL HĐ econtract - mSale",
   "contract.time.create": "Thời gian tạo",
@@ -672,7 +672,7 @@
   "role.contract.type.quantity":"Báo cáo số lượng theo loại hợp đồng",
   "role.contract.receive":"Báo cáo hợp đồng nhận",
   "role.number.contract.econtract.msale":"Báo cáo sản lượng hợp đồng eContract-mSale",
-  "role.report.history.send.sms.email":"Báo cáo lịch sử gửi SMS",
+  "role.report.history.send.sms":"Báo cáo lịch sử gửi SMS",
   "customer.delete": "Xóa khách hàng",
   "currency": "Số tiền",
   "default": "Mặc định",
